# yandex_backend-python_summer_2022

./: .gitmodules
homeworks/homework1/: docker-compose.yml  openapi.yaml  pyproject.toml
homeworks/homework1/tests/: conftest.py
homeworks/homework10/env/: create_tables.sql
homeworks/homework2/: .gitignore  Dockerfile  docker-compose.yml  setup.cfg
homeworks/homework2/app/: mapper.py
homeworks/homework2/config/: __init__.py  get_settings.py
homeworks/homework2/database/: models.py  views.py
homeworks/homework2/homework2-tests/: README.md  pyproject.toml
homeworks/homework2/homework2-tests/tests/: test_handler.py
homeworks/homework2/tests/: conftest.py  utils.py
homeworks/homework3/: .gitignore  Makefile
homeworks/homework3/solution/: task_v2.sql
homeworks/homework4/: pyproject.toml
homeworks/homework4/MigrationsHelper/: MigrationsHelper.py
homeworks/homework5/: Makefile  README.md  pyproject.toml  setup.cfg
homeworks/homework5/tests/: conftest.py  utils.py
homeworks/homework6/: README.md  Variants.md
homeworks/homework6/result/: 600-merge.txt  mix.json
homeworks/homework7/: .gitlab-ci.yml  Makefile
homeworks/homework8/: .gitignore  README.md  docker-compose.yml  nginx.conf
homeworks/homework9/: .gitignore  .gitlab-ci.yml
homeworks/homework_01/: .gitignore  Makefile  README.md
homeworks/homework_02/: Makefile  README.md  pyproject.toml
homeworks/homework_04/: .gitignore
homeworks/homework_07/: README.md
homeworks/homework_08/: Makefile
selection/contest/: A.py  B.py  C.py  D.py  E.py  E_right.py  test.py
(+91 files in other folders)
