[tool.poetry]
name = "code-architecture-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
